--- a/app/src/main/res/layout/list_item_practicals.xml
+++ b/app/src/main/res/layout/list_item_practicals.xml
@@ -7,10 +7,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:id="@+id/linearLayoutPracticals"
             android:padding="10dp">
 
@@ -20,7 +19,9 @@
                 android:text="Heading"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:id="@+id/textViewPracticalName"
-                android:gravity="center"/>
+                android:gravity="left"
+                android:layout_marginRight="65dp"
+                />
             <!--
             <TextView
                 android:layout_width="match_parent"
@@ -28,8 +29,22 @@
                 android:id="@+id/textViewChapterDesc"
                 android:text="Description"/>
                 -->
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_delete_black"
+                android:layout_alignParentRight="true"
+                android:id="@+id/deletePractical"/>
 
-        </LinearLayout>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_edit_black"
+                android:layout_toLeftOf="@id/deletePractical"
+                android:layout_marginRight="10dp"
+                android:id="@+id/editPractical"/>
+
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
