--- a/app/src/main/res/layout/list_item_records.xml
+++ b/app/src/main/res/layout/list_item_records.xml
@@ -8,10 +8,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:id="@+id/linearLayoutRecords"
             android:padding="10dp">
 
@@ -21,7 +20,8 @@
                 android:text="Heading"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:id="@+id/textViewRecordName"
-                android:gravity="center"/>
+                android:gravity="left"
+                android:layout_marginRight="65dp"/>
             <!--
             <TextView
                 android:layout_width="match_parent"
@@ -29,8 +29,22 @@
                 android:id="@+id/textViewChapterDesc"
                 android:text="Description"/>
                 -->
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_delete_black"
+                android:layout_alignParentRight="true"
+                android:id="@+id/deleteRecord"/>
 
-        </LinearLayout>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_edit_black"
+                android:layout_toLeftOf="@id/deleteRecord"
+                android:layout_marginRight="10dp"
+                android:id="@+id/editRecord"/>
+
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
