--- a/app/src/main/res/layout/activity_upload_done.xml
+++ b/app/src/main/res/layout/activity_upload_done.xml
@@ -9,8 +9,7 @@
     <pl.droidsonroids.gif.GifImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/done"
-        />
+        android:src="@drawable/done" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -19,21 +18,39 @@
         android:layout_marginBottom="30dp"
         android:layout_marginHorizontal="30dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        >
+        app:cardElevation="8dp">
 
-        <Button
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Done"
-            android:id="@+id/doneAdding"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:textColor="#ffffff"
-            android:background="#2e9f2c"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/doneAdding"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#2e9f2c"
+                android:text="Done"
+                android:textColor="#ffffff"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/addNewQuestion"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#2e9f2c"
+                android:text="Add new question"
+                android:textColor="#ffffff"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:visibility="gone" />
+
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
-    
 
 
 </RelativeLayout>
