--- a/app/src/main/res/layout/activity_list_of_records.xml
+++ b/app/src/main/res/layout/activity_list_of_records.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".ListOfRecordsActivity">
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBarForRecordList"
+        android:layout_centerInParent="true"/>
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
