--- a/app/src/main/res/layout/activity_upload_done.xml
+++ b/app/src/main/res/layout/activity_upload_done.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#2e9f2c"
+                android:background="#126e1b"
                 android:text="Add new question"
                 android:textColor="#ffffff"
                 android:textSize="20dp"
