--- a/app/src/main/res/layout/list_item_practicals.xml
+++ b/app/src/main/res/layout/list_item_practicals.xml
@@ -20,7 +20,7 @@
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:id="@+id/textViewPracticalName"
                 android:gravity="left"
-                android:layout_marginRight="65dp"
+                android:layout_toLeftOf="@id/deletePractical"
                 />
             <!--
             <TextView
@@ -35,6 +35,7 @@
                 android:src="@drawable/ic_delete_black"
                 android:layout_alignParentRight="true"
                 android:id="@+id/deletePractical"/>
+            <!--
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -43,6 +44,7 @@
                 android:layout_toLeftOf="@id/deletePractical"
                 android:layout_marginRight="10dp"
                 android:id="@+id/editPractical"/>
+                -->
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
