--- a/app/src/main/res/layout/list_item_pyqs.xml
+++ b/app/src/main/res/layout/list_item_pyqs.xml
@@ -21,7 +21,7 @@
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:id="@+id/textViewPYQName"
                 android:gravity="left"
-                android:layout_marginRight="65dp"/>
+                android:layout_toLeftOf="@id/deletePYQ"/>
             <!--
             <TextView
                 android:layout_width="match_parent"
@@ -35,6 +35,7 @@
                 android:src="@drawable/ic_delete_black"
                 android:layout_alignParentRight="true"
                 android:id="@+id/deletePYQ"/>
+            <!--
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -43,6 +44,7 @@
                 android:layout_toLeftOf="@id/deletePYQ"
                 android:layout_marginRight="10dp"
                 android:id="@+id/editPYQ"/>
+                -->
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
