--- a/app/src/main/res/layout/list_item_records.xml
+++ b/app/src/main/res/layout/list_item_records.xml
@@ -21,7 +21,7 @@
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:id="@+id/textViewRecordName"
                 android:gravity="left"
-                android:layout_marginRight="65dp"/>
+                android:layout_toLeftOf="@id/deleteRecord"/>
             <!--
             <TextView
                 android:layout_width="match_parent"
@@ -36,6 +36,8 @@
                 android:layout_alignParentRight="true"
                 android:id="@+id/deleteRecord"/>
 
+            <!--
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -43,6 +45,7 @@
                 android:layout_toLeftOf="@id/deleteRecord"
                 android:layout_marginRight="10dp"
                 android:id="@+id/editRecord"/>
+                -->
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
