--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,14 +30,22 @@
         android:layout_below="@id/welcome"
         android:textStyle="bold"
         />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/recyclerViewVideoCategories"
+        android:layout_below="@+id/title">
+
+    </android.support.v7.widget.RecyclerView>
 
     <GridLayout
         android:id="@+id/gdView"
         android:layout_width="match_parent"
-        android:layout_height="332dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/title"
+        android:layout_below="@+id/recyclerViewVideoCategories"
         android:layout_weight="8"
         android:padding="2dp"
         android:columnCount="1"
@@ -47,8 +55,11 @@
         android:alignmentMode="alignMargins"
         android:layout_marginTop="10dp">
 
+
+
         <!--row 1-->
         <!--col 1-->
+        <!--
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -63,14 +74,8 @@
             android:padding="5dp"
             >
 
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scrollbars="vertical"
-                android:id="@+id/recyclerViewVideoCategories">
 
-            </android.support.v7.widget.RecyclerView>
-            <!--
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -89,14 +94,16 @@
                     android:textStyle="bold" />
 
             </LinearLayout>
-            -->
+
         </android.support.v7.widget.CardView>
+        -->
+
 
 
         <!--col 2-->
         <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_margin="2dp"
@@ -130,8 +137,8 @@
         <!--row 2-->
         <!--col 1-->
         <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_margin="2dp"
@@ -164,8 +171,8 @@
 
         <!--col 2-->
         <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_margin="2dp"
