--- a/app/src/main/res/layout/list_of_video_categories.xml
+++ b/app/src/main/res/layout/list_of_video_categories.xml
@@ -3,14 +3,14 @@
     android:layout_width="wrap_content" android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_margin="8dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            >
 
             <TextView
                 android:id="@+id/nameOfVideoCategories"
@@ -20,7 +20,7 @@
                 android:gravity="center"
                 android:text="No category" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
