--- a/app/src/main/res/layout/list_of_video_categories.xml
+++ b/app/src/main/res/layout/list_of_video_categories.xml
@@ -5,11 +5,13 @@
     <android.support.v7.widget.CardView
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_margin="8dp">
+        android:layout_margin="8dp"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#a49191"
             >
 
             <TextView
@@ -17,7 +19,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_centerInParent="true"
                 android:gravity="center"
+                android:textColor="#000000"
                 android:text="No category" />
 
         </RelativeLayout>
