--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -323,6 +323,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="22dp"
         android:layout_marginRight="10dp"
+        android:onClick="nextClicked"
         app:srcCompat="@drawable/ic_navigate_next_black"
         tools:ignore="VectorDrawableCompat"
         android:visibility="gone"/>
